--- a/CSS/styles.scss
+++ b/CSS/styles.scss
@@ -1,3 +1,14 @@
+$color-orange: #ff9234;
+$color-red: #d92027;
+$color-blue: #35d0ba;
+$color-black-transparent: rgba(0, 0, 0, 0.4);
+
+$shadow-font: 'Shadows Into Light';
+
+
+
+
+
 /* html {
     background-color: rgba(0, 0, 0, 0.01);
     z-index: ;
@@ -11,17 +22,17 @@ body {
 }
 
 nav  {
-    border-bottom: 5px solid #ff9234;
+    border-bottom: 5px solid $color-orange;
     background-color: #fff;   
 }
 
 h1 {
-    font-family: 'Shadows Into Light';
+    font-family: $shadow-font;
     color: black;
 }
 
 .jumbotron {
-    background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url(/CSS/Img/miche-mix-ZeldXtOOOWg-unsplash.jpg);
+    background-image: linear-gradient($color-black-transparent, $color-black-transparent), url(/CSS/Img/miche-mix-ZeldXtOOOWg-unsplash.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     /* background-position: center; */
@@ -44,19 +55,19 @@ h1 {
 .jumbotron button {
     margin-left: 12px;
     padding: 10px 30px;
-    background-color: #d92027;
+    background-color: $color-red;
     color: #fff;
     font-size: 1.3em;
 }
 
 .jumbotron button:hover {
-    background-color: #ff9234;
+    background-color: $color-orange;
     transition: ease-in-out 0.4s;
     
 }
 
 .navbar li a {
-    font-family: 'Shadows Into Light';
+    font-family: $shadow-font;
     font-size: 1.75em;
     color: black;
     padding: 0;
@@ -67,7 +78,7 @@ h1 {
 .navbar li a:hover {
     color: black;
     margin: 0;
-    border-bottom: #ff9234 solid 2px;
+    border-bottom: $color-orange solid 2px;
     transition: ease-in-out;
 }
 
@@ -76,7 +87,7 @@ h1 {
 }
 
 .navbar-brand:hover {
-    color: #D92027;
+    color: $color-red;
 }
 
 .showcase {
@@ -91,7 +102,7 @@ h1 {
 }
 
 .card-head {
-    background-color: #d92027;
+    background-color: $color-red;
 }
 
 .card-head h3 {
@@ -147,7 +158,7 @@ h1 {
 
 .showcase a:hover {
     text-decoration: none;
-    color: #ff9234;
+    color: $color-orange;
 }
 
 .customer-love {
@@ -170,11 +181,11 @@ h1 {
     font-size: 5em;
     font-weight: 900;
     font-family: 'Nothing You Could Do', cursive;
-    text-shadow: #ff9234 4px 4px;
+    text-shadow: $color-orange 4px 4px;
 }
 
 /* hr {
-    border-top: solid #ff9234;
+    border-top: solid $color-orange;
     margin: auto;
     width: 40%;
     margin-bottom: 50px; 
@@ -214,7 +225,7 @@ h1 {
 .img-caption {
     padding: 20px;
     color: white;
-    background-color: rgba(0, 0, 0, 0.4);
+    background-color: $color-black-transparent;
     margin-top: 35%;
     font-size: 1.5em;
     margin-right: 20px;
@@ -222,22 +233,22 @@ h1 {
 }
 
 .btn-orange{
-    background-color: #ff9234;
+    background-color: $color-orange;
     color: white;
     padding: 10px;
 
 }
 
 .modal-header{
-    background-color: #d92027;
+    background-color: $color-red;
     color: white;
-    font-family: 'Shadows Into Light';
+    font-family: $shadow-font;
 
 }
 
 .contact-hr {
     max-width: 40px;
-    background-color: #ff9234;
+    background-color: $color-orange;
     height: 1px;
 }
 
@@ -269,7 +280,7 @@ h1 {
 
 
 footer {
-    background-image: linear-gradient( #35d0ba, #fff);
+    background-image: linear-gradient( $color-blue, #fff);
     padding: 20px 0 0;
     margin-bottom: 0;
 }
