--- a/CSS/styles.scss
+++ b/CSS/styles.scss
@@ -289,6 +289,50 @@ footer {
     color: #000000;
 }
 
+
+
+
+
+//* Modals
+
+.modal-img {
+    width: 300px;
+    margin-left: 50px;
+    
+}
+.stackem {
+    width: 100%;
+    padding-left: 0;
+}
+
+.qty-selector {
+    padding: 10px;
+    font-size: 1.2em;
+}
+
+.btn-modal {
+    background-color: $color-orange;
+    color: white;
+    margin-top: 20px;
+}
+
+.close span{
+    font-size: 1.5em;
+    color: white;
+}
+
+.modal h5 {
+    font-size: 2em;
+    padding-left: 20px;
+}
+
+
+
+
+
+
+//* Media 
+
 @media only screen and (max-width: 992px) {
     .card h3 {
         font-size: 1.3em;
