--- a/CSS/styles.scss
+++ b/CSS/styles.scss
@@ -113,6 +113,7 @@ h1 {
 .card {
     border: none;
     box-shadow: -5px 5px 15px #7e7e7e;
+    
 }
 
 .card:hover {
@@ -126,12 +127,16 @@ h1 {
     margin-bottom: 20px;
 }
 
+
+
 .card-text {
     padding: 1.5rem;
     background: #eeeaea;
-    padding: 10px;
     font-size: 1.2em;
+    height: 125px;
 }
+
+
 
 .showcase .card-img-top {
     width: 50%;
@@ -226,9 +231,9 @@ h1 {
     padding: 20px;
     color: white;
     background-color: $color-black-transparent;
-    margin-top: 35%;
+    margin: 50% 20px 50% 0;
     font-size: 1.5em;
-    margin-right: 20px;
+    
 
 }
 
@@ -255,7 +260,7 @@ h1 {
 .yellow-bg {
     background-color: #fcf2c7;
     padding: 20px;
-    margin: 100px;
+    margin: 50px 20px;
 }
 
 .sub-btn {
@@ -298,7 +303,6 @@ footer {
 .modal-img {
     width: 300px;
     margin-left: 50px;
-    
 }
 .stackem {
     width: 100%;
@@ -306,14 +310,14 @@ footer {
 }
 
 .qty-selector {
-    padding: 10px;
+    padding: 20px 0;
     font-size: 1.2em;
 }
 
 .btn-modal {
     background-color: $color-orange;
     color: white;
-    margin-top: 20px;
+    margin-top: 5px;
 }
 
 .close span{
@@ -325,6 +329,25 @@ footer {
     font-size: 2em;
     padding-left: 20px;
 }
+
+.regular-price{
+    font-size: 1.3em;
+    color: rgb(119, 119, 119);
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.sale-price{
+    font-size: 1.3em;
+    font-weight: bold;
+    margin-right: 15px;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.modal h4{
+    color: $color-red;
+}
+
+
 
 
 
@@ -339,7 +362,50 @@ footer {
     }
 
     .yellow-bg {
-        margin: 40px;
+        margin: 20px auto;
     }
 
+    .jumbotron{
+        height: 50vh;
+    }
+    .card-text{
+        height: 175px;
+    }
+    .img-caption{
+        text-align: center;
+        margin: 30% auto;
+        
+    }
+
+ 
+
+}
+
+@media only screen and (max-width: 768px) {
+    .card-text{
+        height: 175px;
+        font-size: 1.3em;
+    }
+    .card{
+        width: 75%;
+        margin: auto;   
+    }
+    .parallax {
+        height: 50vh;
+
+        
+    }
+
+    
+}
+
+@media only screen and (max-width: 600px){
+    .modal-img {
+        width: 100%;
+        margin: auto;    
+    }
+
+    .yellow-bg{
+        margin: 20px auto;
+    }
 }
