--- a/CSS/styles.scss
+++ b/CSS/styles.scss
@@ -18,8 +18,9 @@ $shadow-font: 'Shadows Into Light';
 body {
     margin: 0;
     padding: 0;
-    
 }
+
+
 
 nav  {
     border-bottom: 5px solid $color-orange;
@@ -348,7 +349,41 @@ footer {
 }
 
 
+// ? About Page
 
+.gray-bg h3{
+    padding-top: 50px;
+}
+
+.about-content{
+    padding: 10px 200px 50px;
+}
+
+.hero-container img{
+    width: 100%;
+    height: auto;
+    margin: 30px auto;
+    
+    
+}
+
+.about-img img{
+    width: 500px;
+    height: 550px;
+    margin: 20px;
+    box-shadow: -10px 10px 15px #353535;
+}
+
+.about-mid{
+    background-color: rgb(236, 236, 236);
+    margin: 0;
+    padding: 0;
+}
+
+.gray-bg{
+    background-color: rgba(236, 236, 236, 0.8);
+    margin-top: 30px;;
+}
 
 
 
@@ -374,10 +409,21 @@ footer {
     .img-caption{
         text-align: center;
         margin: 30% auto;
-        
     }
 
- 
+    .gray.bg h3{
+        padding: 0;
+        margin: 0;
+    }
+
+    .about-content{
+        padding: 10px 100px 50px;
+        p{
+            margin-top: 0;
+            padding-top: 0;
+        }
+       
+    }
 
 }
 
@@ -407,5 +453,9 @@ footer {
 
     .yellow-bg{
         margin: 20px auto;
+    }
+
+    .about-content{
+        padding: 10px 100px 20px;
     }
 }
