--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -263,18 +263,21 @@ footer {
 .hero-container img {
   width: 100%;
   height: auto;
-  margin: 30px auto; }
+  margin: 30px auto 0; }
 
 .about-img img {
   width: 500px;
   height: 550px;
-  margin: 20px;
-  box-shadow: -10px 10px 15px #353535; }
+  margin: 120px 20px; }
 
 .about-mid {
-  background-color: #ececec;
   margin: 0;
-  padding: 0; }
+  padding: 0;
+  background-image: url(./Img/corkboard3.jpg);
+  background-size: cover;
+  width: 100%;
+  box-shadow: -20px 20px 25px #727272;
+  border-radius: 20px; }
 
 .gray-bg {
   background-color: rgba(236, 236, 236, 0.8);
@@ -318,4 +321,17 @@ footer {
   .yellow-bg {
     margin: 20px auto; }
   .about-content {
-    padding: 10px 100px 20px; } }
+    padding: 10px 100px 20px; }
+  .about-img img {
+    width: 80%;
+    margin: 30px 0 30px 50px;
+    padding: 40px auto; } }
+
+.from-left {
+  transform: translateY(100%); }
+
+.from-right {
+  transform: translateY(120%); }
+
+.jumbo-body {
+  transform: translatex(150%); }
