--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -230,7 +230,19 @@ footer {
 .btn-modal {
   background-color: #ff9234;
   color: white;
-  margin-top: 5px; }
+  margin-top: 5px;
+  transition: all .2s ease-in-out; }
+
+.btn-modal:hover {
+  background-color: #d92027;
+  transform: scale(1.1); }
+
+.contact-us-button {
+  transition: all .2s ease-in-out; }
+
+.contact-us-button:hover {
+  background-color: #d92027;
+  transform: scale(1.1); }
 
 .close span {
   font-size: 1.5em;
